animation header nav

--- a/news.html
+++ b/news.html
@@ -29,7 +29,7 @@
               <a href="./about.html">Om oss</a>
             </li>
             <li class="nav-item">
-              <a href="./news.html">Nyheter</a>
+              <a href="./news.html" class="accent-border">Nyheter</a>
             </li>
             <li class="nav-item">
               <a href="./contacts.html">Kontakt</a>
