--- a/newsCard.html
+++ b/newsCard.html
@@ -18,174 +18,198 @@
           <img class="logo-img" src="/img/Logo1.png" alt="logo" />
         </a>
 
-        <button type="button" class="menu-button js-menu-button" aria-controls="nav-menu">
+        <button
+          type="button"
+          class="menu-button js-menu-button"
+          aria-controls="nav-menu"
+        >
           <svg width="45" height="45">
-            <use href="./svg/symbol-defs.svg#menu-button" class="icon-burger"></use>
+            <use
+              href="./svg/symbol-defs.svg#menu-button"
+              class="icon-burger"
+            ></use>
             <use href="./svg/symbol-defs.svg#cross" class="icon-cross"></use>
           </svg>
         </button>
 
-          <ul class="nav-list list js-nav-list is-hidden" id="nav-menu">
-            <li class="nav-item">
-              <a href="./projects.html">Prosjekter</a>
-            </li>
-            <li class="nav-item">
-              <a href="./about.html">Om oss</a>
-            </li>
-            <li class="nav-item">
-              <a href="./news.html">Nyheter</a>
-            </li>
-            <li class="nav-item">
-              <a href="./contacts.html">Kontakt</a>
-            </li>
-          </ul>
+        <ul class="nav-list list js-nav-list is-hidden" id="nav-menu">
+          <li class="nav-project nav-item">
+            <a href="./projects.html">Prosjekter</a>
+          </li>
+          <li class="nav-item nav-about">
+            <a href="./about.html">Om oss</a>
+          </li>
+          <li class="nav-item nav-news">
+            <a href="./news.html" class="accent-border">Nyheter</a>
+          </li>
+          <li class="nav-item nav-contacts">
+            <a href="./contacts.html">Kontakt</a>
+          </li>
+        </ul>
       </div>
     </header>
 
-    <div class="options-conteiner">
-      <div class="conteiner">
-        <div class="carousel">
-          <div id="slider-wrapper">
-            <input
-              type="radio"
-              id="button-1"
-              name="buttons"
-              checked="checked"
-            />
-            <label for="button-1"></label>
-            <input type="radio" id="button-2" name="buttons" />
-            <label for="button-2"></label>
-            <input type="radio" id="button-3" name="buttons" />
-            <label for="button-3"></label>
-            <input type="radio" id="button-4" name="buttons" />
-            <label for="button-4"></label>
-            <input type="radio" id="button-5" name="buttons" />
-            <label for="button-5"></label>
-
-            <div id="slider">
-              <ul>
-                <li id="slide1">
-                  <img src="./img/carouselPhoto1.png" alt="house" />
-                </li>
-                <li id="slide2">
-                  <img src="./img/carouselPhoto1.png" alt="house" />
-                </li>
-                <li id="slide3">
-                  <img src="./img/carouselPhoto1.png" alt="house" />
-                </li>
-                <li id="slide4">
-                  <img src="./img/carouselPhoto1.png" alt="house" />
-                </li>
-                <li id="slide5">
-                  <img src="./img/carouselPhoto1.png" alt="house" />
-                </li>
-              </ul>
+    <div>
+      <div class="options-conteiner">
+        <div class="conteiner">
+          <div class="carousel-container">
+            <div class="carousel-imgs">
+              <img
+                src="./img/carouselPhoto1.png"
+                class="carousel-img visible"
+              />
+              <img
+                src="./img/about-apartment.png"
+                class="carousel-img hidden"
+              />
+              <img src="./img/about-teracce.png" class="carousel-img hidden" />
             </div>
+            <a class="prev arrow">&#5176;</a>
+            <a class="next arrow">&#5171;</a>
+          </div>
+          <div class="carousel-captions">
+            <p class="carousel-caption visible">1/3</p>
+            <p class="carousel-caption hidden">2/3</p>
+            <p class="carousel-caption hidden">3/3</p>
+          </div>
+          <h1 class="news-title">
+            Limihagen 2 – Solrik idyll med landlig beliggenhet
+          </h1>
+
+          <div class="news__options">
+            <div class="price">
+              <p class="price-paragraph">Man. 31. okt</p>
+            </div>
+            <p class="news__options-paragraph">
+              Salentunet er en sjelden mulighet fra Heimgard Bolig og PBBL.
+              Boligene på Salentunet får ikke bare utsikt til sjøen – de får
+              havet som nærmeste nabo.
+            </p>
           </div>
         </div>
-        <h1 class="main-title">
-          Limihagen 2 – Solrik idyll med landlig beliggenhet
-        </h1>
+      </div>
 
-        <div class="news__options">
-          <div class="price">
-            <p class="price-paragraph">Man. 31. okt</p>
-          </div>
-          <p class="news__options-paragraph">
-            Salentunet er en sjelden mulighet fra Heimgard Bolig og PBBL.
-            Boligene på Salentunet får ikke bare utsikt til sjøen – de får havet
-            som nærmeste nabo.
+      <div class="news__description conteiner">
+        <p class="">
+          Salentunet ligger nær Langesund. Området er kjent for båtproduksjon og
+          bryggeanlegg. Her er det spennende fiskemuligheter og friarealer med
+          egen sandstrand. - Salentunet har en unik beliggenhet, mener Tina. -
+          Prosjektet får et sosialt bomiljø hvor både store og små kommer til å
+          trives. Vi har hatt fokus på både lek, oppvekst og fellesskap i
+          utformingen av prosjektet. Målet er at alle beboere skal finne ro og
+          hyggelige omgivelser som inviterer til opplevelser både ute og
+          innendørs.
+        </p>
+        <div class="news__main-image">
+          <img src="./img/news-page-img.png" alt="housing" class="hero-img" />
+          <p class="contents-text news__contents-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam
           </p>
-      </div>
-    </div>
+        </div>
+        <div class="news__description-blok">
+          <h3>Litt om prosjektet</h3>
+          <p>
+            Endelig kommer et nytt byggetrinn av Tollskogvegen! Det første
+            byggetrinnet er nå bygd ferdig og kjøperne har flyttet inn i sine
+            nye boliger. I Tollskogvegen II blir det 12 nye hjem fordelt på tre
+            boligtyper: To ulike firemannsboliger og rekkehus. I den ene
+            firemannsboligen er hver leilighet på 82,1 kvadratmeter BRA. Her
+            finner du gang, to soverom, egen bod, bad og en åpen stue- og
+            kjøkkenløsning med utgang til en vestvendt terrasse eller balkong. I
+            den andre firemannsboligen er leilighetene litt større, 92,8
+            kvadratmeter BRA. De har derfor plass til ett soverom ekstra.
+          </p>
+        </div>
+        <div class="quote">
+          <svg width="40" height="71">
+            <use href="./svg/symbol-defs.svg#quotes"></use>
+          </svg>
+          <p class="news__quote-text">
+            Endelig kommer et nytt byggetrinn av Tollskogvegen! Det første
+            byggetrinnet er nå bygd ferdig og kjøperne har flyttet inn i sine
+            nye bolige
+          </p>
+          <p class="news__quote-author">Av Lorem ipsum</p>
+        </div>
 
-    <div class="news__description conteiner">
-      <p class="">Salentunet ligger nær Langesund. Området er kjent for båtproduksjon og bryggeanlegg. Her er det spennende fiskemuligheter og friarealer med egen sandstrand. - Salentunet har en unik beliggenhet, mener Tina. - Prosjektet får et sosialt bomiljø hvor både store og små kommer til å trives. Vi har hatt fokus på både lek, oppvekst og fellesskap i utformingen av prosjektet. Målet er at alle beboere skal finne ro og hyggelige omgivelser som inviterer til opplevelser både ute og innendørs.</p>
-      <div class="news__main-image">
-        <img src="./img/news-page-img.png" alt="housing" class="hero-img" />
-        <p class="contents-text">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
-        </p>
-      </div>
-      <div class="news__description-blok">
-        <h3>Helhetlig uttrykk h2</h3>
-        <p>Endelig kommer et nytt byggetrinn av Tollskogvegen! Det første byggetrinnet er nå bygd ferdig og kjøperne har flyttet inn i sine nye boliger. I Tollskogvegen II blir det 12 nye hjem fordelt på tre boligtyper: To ulike firemannsboliger og rekkehus. I den ene firemannsboligen er hver leilighet på 82,1 kvadratmeter BRA. Her finner du gang, to soverom, egen bod, bad og en åpen stue- og kjøkkenløsning med utgang til en vestvendt terrasse eller balkong. I den andre firemannsboligen er leilighetene litt større, 92,8 kvadratmeter BRA. De har derfor plass til ett soverom ekstra.</p>
-      </div>
-      <div class="quote">
-        <svg width="40" height="71">
-          <use href="./svg/symbol-defs.svg#quotes"></use>
-        </svg>
-        <p>Endelig kommer et nytt byggetrinn av Tollskogvegen! Det første byggetrinnet er nå bygd ferdig og kjøperne har flyttet inn i sine nye bolige</p>
-      <p class="news__quote-author">Av Lorem ipsum</p>
-      </div>
-
-      <div class="news__second-image">
-        <img src="./img/news-house-inn.png" alt="housing" class="hero-img" />
-        <p class="contents-text">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
-        </p>
-        <p class="news__housing-description">Endelig kommer et nytt byggetrinn av Tollskogvegen! Det første byggetrinnet er nå bygd ferdig og kjøperne har flyttet inn i sine nye boliger. I Tollskogvegen II blir det 12 nye hjem fordelt på tre boligtyper: To ulike firemannsboliger og rekkehus. I den ene firemannsboligen er hver leilighet på 82,1 kvadratmeter BRA. Her finner du gang, to soverom, egen bod, bad og en åpen stue- og kjøkkenløsning med utgang til en vestvendt terrasse eller balkong. I den andre firemannsboligen er leilighetene litt større, 92,8 kvadratmeter BRA. De har derfor plass til ett soverom ekstra.</p>
-      <p>Av Lorem ipsum</p>
-      </div>
-
-      
-    </div>
-
+        <div class="news__second-image">
+          <img src="./img/news-house-inn.png" alt="housing" class="hero-img" />
+          <p class="contents-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam
+          </p>
+          <p class="news__housing-description">
+            Endelig kommer et nytt byggetrinn av Tollskogvegen! Det første
+            byggetrinnet er nå bygd ferdig og kjøperne har flyttet inn i sine
+            nye boliger. I Tollskogvegen II blir det 12 nye hjem fordelt på tre
+            boligtyper: To ulike firemannsboliger og rekkehus. I den ene
+            firemannsboligen er hver leilighet på 82,1 kvadratmeter BRA. Her
+            finner du gang, to soverom, egen bod, bad og en åpen stue- og
+            kjøkkenløsning med utgang til en vestvendt terrasse eller balkong. I
+            den andre firemannsboligen er leilighetene litt større, 92,8
+            kvadratmeter BRA. De har derfor plass til ett soverom ekstra.
+          </p>
+          <p>Av Lorem ipsum</p>
+        </div>
       </div>
     </div>
 
     <footer class="conteiner">
       <div class="footer__conteiner">
         <h2 class="second-title">Kontaktinformasjon</h2>
-      <ul class="contacts-list list">
-        <li class="contakts-item">
-          <p class="footer__contacts-kind">Addrese</p>
-          <address>
-            <p>Odin Eiendom</p>
-            <p>Lunderingen 1</p>
-            <p>3941 Porsgrunn</p>
-            <a href="" class="contacts-link">Kart</a>
-          </address>
-        </li>
-        <li class="contakts-item">
-          <p class="footer__contacts-kind">Telefon</p>
-          <p>Ma - fre 10-16</p>
-          <a href="tel:45636260" class="contacts-link">45 63 62 60</a>
-        </li>
-        <li class="contakts-item">
-          <p class="footer__contacts-kind">Mail</p>
-          <a href="malito:kontakt@odinedom.no" class="contacts-link"
-            >kontakt@odinedom.no</a
-          >
-        </li>
-      </ul>
-      <div class="copyright">
-        <p class="copyrigth-paragraph">
-          Copyright 2021 © Moen Eiendom - <span>Org nr: 918712267</span>
-        </p>
-        <ul class="social-list list">
-          <li class="social-item">
-            <a href=""
-              ><svg class="social-svg" width="21" height="33">
-                <use href="./svg/symbol-defs.svg#facebook"></use></svg
-            ></a>
+        <ul class="contacts-list list">
+          <li class="contakts-item">
+            <p class="footer__contacts-kind">Addrese</p>
+            <address>
+              <p>Odin Eiendom</p>
+              <p>Lunderingen 1</p>
+              <p>3941 Porsgrunn</p>
+              <a href="" class="contacts-link">Kart</a>
+            </address>
           </li>
-          <li class="social-item">
-            <a href=""
-              ><svg class="social-svg" width="21" height="33">
-                <use href="./svg/symbol-defs.svg#linkedin"></use></svg
-            ></a>
+          <li class="contakts-item">
+            <p class="footer__contacts-kind">Telefon</p>
+            <p>Ma - fre 10-16</p>
+            <a href="tel:45636260" class="contacts-link">45 63 62 60</a>
           </li>
-          <li class="social-item">
-            <a href=""
-              ><svg class="social-svg" width="21" height="33">
-                <use href="./svg/symbol-defs.svg#instagram"></use></svg
-            ></a>
+          <li class="contakts-item">
+            <p class="footer__contacts-kind">Mail</p>
+            <a href="malito:kontakt@odinedom.no" class="contacts-link"
+              >kontakt@odinedom.no</a
+            >
           </li>
         </ul>
-      </div>
+        <div class="copyright">
+          <p class="copyrigth-paragraph">
+            Copyright 2021 © Moen Eiendom - <span>Org nr: 918712267</span>
+          </p>
+          <ul class="social-list list">
+            <li class="social-item">
+              <a href=""
+                ><svg class="social-svg" width="21" height="33">
+                  <use href="./svg/symbol-defs.svg#facebook"></use></svg
+              ></a>
+            </li>
+            <li class="social-item">
+              <a href=""
+                ><svg class="social-svg" width="21" height="33">
+                  <use href="./svg/symbol-defs.svg#linkedin"></use></svg
+              ></a>
+            </li>
+            <li class="social-item">
+              <a href=""
+                ><svg class="social-svg" width="21" height="33">
+                  <use href="./svg/symbol-defs.svg#instagram"></use></svg
+              ></a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
     <script src="./js/menuButton.js"></script>
+    <script src="./js/carousel.js"></script>
   </body>
 </html>
