--- a/projectCard.html
+++ b/projectCard.html
@@ -34,7 +34,7 @@
 
         <ul class="nav-list list js-nav-list is-hidden" id="nav-menu">
           <li class="nav-item">
-            <a href="./projects.html">Prosjekter</a>
+            <a href="./projects.html" class="accent-border">Prosjekter</a>
           </li>
           <li class="nav-item">
             <a href="./about.html">Om oss</a>
@@ -153,17 +153,6 @@
         </li>
       </ul>
 
-      <div class="project__procces-line">
-        <ul class="project__procces-list">
-          <li class="project__procces-item">
-            <svg width="18px" height="18px">
-              <use href="./svg/symbol-defs.svg#"></use>
-            </svg>
-            <span>Kv.1 2023</span>
-            <p>Lorem ipsum</p>
-          </li>
-        </ul>
-      </div>
       <div class="description-block">
         <h3 class="description-title">Litt om prosjektet</h3>
         <p class="description-text">
