--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
 
           <ul class="nav-list list js-nav-list is-hidden" id="nav-menu">
             <li class="nav-item">
-              <a href="./projects.html">Prosjekter</a>
+              <a href="./projects.html" class="accent-border">Prosjekter</a>
             </li>
             <li class="nav-item">
               <a href="./about.html">Om oss</a>
