--- a/about.html
+++ b/about.html
@@ -25,8 +25,8 @@
             <li class="nav-item">
               <a href="./projects.html">Prosjekter</a>
             </li>
-            <li class="nav-item">
-              <a href="./about.html">Om oss</a>
+            <li class="nav-item ">
+              <a href="./about.html" class="accent-border">Om oss</a>
             </li>
             <li class="nav-item">
               <a href="./news.html">Nyheter</a>
