--- a/contacts.html
+++ b/contacts.html
@@ -32,7 +32,7 @@
               <a href="./news.html">Nyheter</a>
             </li>
             <li class="nav-item">
-              <a href="./contacts.html">Kontakt</a>
+              <a href="./contacts.html" class="accent-border">Kontakt</a>
             </li>
           </ul>
       </div>
