--- a/newsCard.html
+++ b/newsCard.html
@@ -33,17 +33,17 @@
         </button>
 
         <ul class="nav-list list js-nav-list is-hidden" id="nav-menu">
-          <li class="nav-project nav-item">
-            <a href="./projects.html">Prosjekter</a>
+          <li class="  nav-item">
+            <a href="./projects.html" class="nav-project nav-link">Prosjekter</a>
           </li>
-          <li class="nav-item nav-about">
-            <a href="./about.html">Om oss</a>
+          <li class="nav-item ">
+            <a href="./about.html" class="nav-about nav-link">Om oss</a>
           </li>
-          <li class="nav-item nav-news">
-            <a href="./news.html" class="accent-border">Nyheter</a>
+          <li class="nav-item">
+            <a href="./news.html" class="nav-news nav-link accent-border ">Nyheter</a>
           </li>
-          <li class="nav-item nav-contacts">
-            <a href="./contacts.html">Kontakt</a>
+          <li class="nav-item">
+            <a href="./contacts.html" class="nav-contacts nav-link">Kontakt</a>
           </li>
         </ul>
       </div>
