--- a/projects.html
+++ b/projects.html
@@ -14,27 +14,34 @@
           <img class="logo-img" src="/img/Logo1.png" alt="logo" />
         </a>
 
-        <button type="button" class="menu-button js-menu-button" aria-controls="nav-menu">
+        <button
+          type="button"
+          class="menu-button js-menu-button"
+          aria-controls="nav-menu"
+        >
           <svg width="45" height="45">
-            <use href="./svg/symbol-defs.svg#menu-button" class="icon-burger"></use>
+            <use
+              href="./svg/symbol-defs.svg#menu-button"
+              class="icon-burger"
+            ></use>
             <use href="./svg/symbol-defs.svg#cross" class="icon-cross"></use>
           </svg>
         </button>
 
-          <ul class="nav-list list js-nav-list is-hidden" id="nav-menu">
-            <li class="nav-item">
-              <a href="./projects.html" class="accent-border">Prosjekter</a>
-            </li>
-            <li class="nav-item">
-              <a href="./about.html">Om oss</a>
-            </li>
-            <li class="nav-item">
-              <a href="./news.html">Nyheter</a>
-            </li>
-            <li class="nav-item">
-              <a href="./contacts.html">Kontakt</a>
-            </li>
-          </ul>
+        <ul class="nav-list list js-nav-list is-hidden" id="nav-menu">
+          <li class="  nav-item">
+            <a href="./projects.html" class="nav-project nav-link accent-border">Prosjekter</a>
+          </li>
+          <li class="nav-item ">
+            <a href="./about.html" class="nav-about nav-link">Om oss</a>
+          </li>
+          <li class="nav-item">
+            <a href="./news.html" class="nav-news nav-link  ">Nyheter</a>
+          </li>
+          <li class="nav-item">
+            <a href="./contacts.html" class="nav-contacts nav-link">Kontakt</a>
+          </li>
+        </ul>
       </div>
     </header>
 
