--- a/projectCard.html
+++ b/projectCard.html
@@ -33,17 +33,17 @@
         </button>
 
         <ul class="nav-list list js-nav-list is-hidden" id="nav-menu">
-          <li class="nav-item">
-            <a href="./projects.html" class="accent-border">Prosjekter</a>
+          <li class="  nav-item">
+            <a href="./projects.html" class="nav-project nav-link accent-border">Prosjekter</a>
+          </li>
+          <li class="nav-item ">
+            <a href="./about.html" class="nav-about nav-link">Om oss</a>
           </li>
           <li class="nav-item">
-            <a href="./about.html">Om oss</a>
+            <a href="./news.html" class="nav-news nav-link ">Nyheter</a>
           </li>
           <li class="nav-item">
-            <a href="./news.html">Nyheter</a>
-          </li>
-          <li class="nav-item">
-            <a href="./contacts.html">Kontakt</a>
+            <a href="./contacts.html" class="nav-contacts nav-link">Kontakt</a>
           </li>
         </ul>
       </div>
