--- a/news.html
+++ b/news.html
@@ -55,7 +55,7 @@
           <a href="./newsCard.html" class="news-link">
             <img src="./img/news1.png" alt="house" class="news-img" />
             <p class="news-date">Man. 31. okt</p>
-            <h3 class="news-title">Salgstart trinn 2 Strømdalspynten</h3>
+            <h3 class="news__card-title">Salgstart trinn 2 Strømdalspynten</h3>
             <p class="news-text">
               Vi har nå startet salget av prosjektet Strømdalspynten. 28
               innholdsrike leiligheter sentralt beliggende på Myren og med
@@ -67,7 +67,7 @@
           <a href="./newsCard.html" class="news-link">
             <img src="./img/news2.png" alt="house" class="news-img" />
             <p class="news-date">Man. 31. okt</p>
-            <h3 class="news-title">Salgstart trinn 2 Strømdalspynten</h3>
+            <h3 class="news__card-title">Salgstart trinn 2 Strømdalspynten</h3>
             <p class="news-text">
               Vi har nå startet salget av prosjektet Strømdalspynten. 28
               innholdsrike leiligheter sentralt beliggende på Myren og med
@@ -79,7 +79,7 @@
           <a href="./newsCard.html" class="news-link">
             <img src="./img/news3.png" alt="house" class="news-img" />
             <p class="news-date">Man. 31. okt</p>
-            <h3 class="news-title">Salgstart trinn 2 Strømdalspynten</h3>
+            <h3 class="news__card-title">Salgstart trinn 2 Strømdalspynten</h3>
             <p class="news-text">
               Vi har nå startet salget av prosjektet Strømdalspynten. 28
               innholdsrike leiligheter sentralt beliggende på Myren og med
@@ -91,7 +91,7 @@
           <a href="./newsCard.html" class="news-link">
             <img src="./img/news1.png" alt="house" class="news-img" />
             <p class="news-date">Man. 31. okt</p>
-            <h3 class="news-title">Salgstart trinn 2 Strømdalspynten</h3>
+            <h3 class="news__card-title">Salgstart trinn 2 Strømdalspynten</h3>
             <p class="news-text">
               Vi har nå startet salget av prosjektet Strømdalspynten. 28
               innholdsrike leiligheter sentralt beliggende på Myren og med
@@ -103,7 +103,7 @@
           <a href="./newsCard.html" class="news-link">
             <img src="./img/news2.png" alt="house" class="news-img" />
             <p class="news-date">Man. 31. okt</p>
-            <h3 class="news-title">Salgstart trinn 2 Strømdalspynten</h3>
+            <h3 class="news__card-title">Salgstart trinn 2 Strømdalspynten</h3>
             <p class="news-text">
               Vi har nå startet salget av prosjektet Strømdalspynten. 28
               innholdsrike leiligheter sentralt beliggende på Myren og med
@@ -115,7 +115,7 @@
           <a href="./newsCard.html" class="news-link">
             <img src="./img/news3.png" alt="house" class="news-img" />
             <p class="news-date">Man. 31. okt</p>
-            <h3 class="news-title">Salgstart trinn 2 Strømdalspynten</h3>
+            <h3 class="news__card-title">Salgstart trinn 2 Strømdalspynten</h3>
             <p class="news-text">
               Vi har nå startet salget av prosjektet Strømdalspynten. 28
               innholdsrike leiligheter sentralt beliggende på Myren og med
