--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
             <a href="./about.html" class="nav-about nav-link accent-border ">Om oss</a>
           </li>
           <li class="nav-item">
-            <a href="./news.html" class="nav-news nav-link accent-border ">Nyheter</a>
+            <a href="./news.html" class="nav-news nav-link">Nyheter</a>
           </li>
           <li class="nav-item">
             <a href="./contacts.html" class="nav-contacts nav-link">Kontakt</a>
@@ -142,7 +142,7 @@
       <div class="footer__conteiner">
         <h2 class="second-title">Kontaktinformasjon</h2>
       <ul class="contacts-list list">
-        <li class="contakts-item">
+        <li class="contacts-item">
           <p class="footer__contacts-kind">Addrese</p>
           <address>
             <p>Odin Eiendom</p>
@@ -151,12 +151,12 @@
             <a href="" class="contacts-link">Kart</a>
           </address>
         </li>
-        <li class="contakts-item">
+        <li class="contacts-item">
           <p class="footer__contacts-kind">Telefon</p>
           <p>Ma - fre 10-16</p>
           <a href="tel:45636260" class="contacts-link">45 63 62 60</a>
         </li>
-        <li class="contakts-item">
+        <li class="contacts-item">
           <p class="footer__contacts-kind">Mail</p>
           <a href="malito:kontakt@odinedom.no" class="contacts-link"
             >kontakt@odinedom.no</a
