--- a/newsCard.html
+++ b/newsCard.html
@@ -161,7 +161,7 @@
       <div class="footer__conteiner">
         <h2 class="second-title">Kontaktinformasjon</h2>
         <ul class="contacts-list list">
-          <li class="contakts-item">
+          <li class="contacts-item">
             <p class="footer__contacts-kind">Addrese</p>
             <address>
               <p>Odin Eiendom</p>
@@ -170,12 +170,12 @@
               <a href="" class="contacts-link">Kart</a>
             </address>
           </li>
-          <li class="contakts-item">
+          <li class="contacts-item">
             <p class="footer__contacts-kind">Telefon</p>
             <p>Ma - fre 10-16</p>
             <a href="tel:45636260" class="contacts-link">45 63 62 60</a>
           </li>
-          <li class="contakts-item">
+          <li class="contacts-item">
             <p class="footer__contacts-kind">Mail</p>
             <a href="malito:kontakt@odinedom.no" class="contacts-link"
               >kontakt@odinedom.no</a
