--- a/projectCard.html
+++ b/projectCard.html
@@ -183,7 +183,7 @@
 
         <ul class="buttons-list">
           <li class="buttons-item">
-            <button class="description-button">
+            <button class="description-button main-button">
               Meld intresse
               <svg class="arrow-svg" width="26" height="19">
                 <use href="./svg/symbol-defs.svg#arrow"></use>
@@ -191,7 +191,7 @@
             </button>
           </li>
           <li class="buttons-item">
-            <button class="description-button">
+            <button class="description-button main-button">
               Prosjektets hjemmeside
               <svg class="arrow-svg" width="26" height="19">
                 <use href="./svg/symbol-defs.svg#arrow"></use>
@@ -199,7 +199,7 @@
             </button>
           </li>
           <li class="buttons-item">
-            <button class="description-button">
+            <button class="description-button main-button">
               Prisliste (PDF)
               <svg class="arrow-svg" width="26" height="19">
                 <use href="./svg/symbol-defs.svg#arrow"></use>
@@ -207,7 +207,7 @@
             </button>
           </li>
           <li class="buttons-item">
-            <button class="description-button">
+            <button class="description-button main-button">
               Prospekt (PDF)
               <svg class="arrow-svg" width="26" height="19">
                 <use href="./svg/symbol-defs.svg#arrow"></use>
@@ -286,7 +286,7 @@
       <div class="footer__conteiner">
         <h2 class="second-title">Kontaktinformasjon</h2>
         <ul class="contacts-list list">
-          <li class="contakts-item">
+          <li class="contacts-item">
             <p class="footer__contacts-kind">Addrese</p>
             <address>
               <p>Odin Eiendom</p>
@@ -295,12 +295,12 @@
               <a href="" class="contacts-link">Kart</a>
             </address>
           </li>
-          <li class="contakts-item">
+          <li class="contacts-item">
             <p class="footer__contacts-kind">Telefon</p>
             <p>Ma - fre 10-16</p>
             <a href="tel:45636260" class="contacts-link">45 63 62 60</a>
           </li>
-          <li class="contakts-item">
+          <li class="contacts-item">
             <p class="footer__contacts-kind">Mail</p>
             <a href="malito:kontakt@odinedom.no" class="contacts-link"
               >kontakt@odinedom.no</a
