--- a/projects.html
+++ b/projects.html
@@ -62,44 +62,56 @@
       </ul>
 
       <ul class="projects-list list">
-        <li class="project-item">
-          <a href="./projectCard.html" class="project-link">
-            <img src="./img/project1.png" alt="house" class="projects-img" />
+        <li class="card-item">
+          <a href="./projectCard.html" class="card-link">
+            <div class="card__link-img">
+              <img src="./img/project1.png" alt="house" class="card-img" />
+            </div>
             <h3 class="project-title">Tollskogvegen II – Porsgrunn</h3>
             <p class="project-date">Lansering okt 2023</p>
           </a>
         </li>
-        <li class="project-item">
-          <a href="./projectCard.html" class="project-link">
-            <img src="./img/project2.png" alt="house" class="projects-img" />
+        <li class="card-item">
+          <a href="./projectCard.html" class="card-link">
+            <div class="card__link-img">
+              <img src="./img/project2.png" alt="house" class="card-img" />
+            </div>
             <h3 class="project-title">Tollskogvegen II – Porsgrunn</h3>
             <p class="project-date">Lansering okt 2023</p>
           </a>
         </li>
-        <li class="project-item">
-          <a href="./projectCard.html" class="project-link">
-            <img src="./img/project3.png" alt="house" class="projects-img" />
+        <li class="card-item">
+          <a href="./projectCard.html" class="card-link">
+            <div class="card__link-img">
+              <img src="./img/project3.png" alt="house" class="card-img" />
+            </div>
             <h3 class="project-title">Tollskogvegen II – Porsgrunn</h3>
             <p class="project-date">Lansering okt 2023</p>
           </a>
         </li>
-        <li class="project-item">
-          <a href="./projectCard.html" class="project-link">
-            <img src="./img/project4.png" alt="house" class="projects-img" />
+        <li class="card-item">
+          <a href="./projectCard.html" class="card-link">
+            <div class="card__link-img">
+              <img src="./img/project4.png" alt="house" class="card-img" />
+            </div>
             <h3 class="project-title">Tollskogvegen II – Porsgrunn</h3>
             <p class="project-date">Lansering okt 2023</p>
           </a>
         </li>
-        <li class="project-item">
-          <a href="./projectCard.html" class="project-link">
-            <img src="./img/project5.png" alt="house" class="projects-img" />
+        <li class="card-item">
+          <a href="./projectCard.html" class="card-link">
+            <div class="card__link-img">
+              <img src="./img/project5.png" alt="house" class="card-img" />
+            </div>
             <h3 class="project-title">Tollskogvegen II – Porsgrunn</h3>
             <p class="project-date">Lansering okt 2023</p>
           </a>
         </li>
-        <li class="project-item">
-          <a href="./projectCard.html" class="project-link">
-            <img src="./img/project6.png" alt="house" class="projects-img" />
+        <li class="card-item">
+          <a href="./projectCard.html" class="card-link">
+            <div class="card__link-img">
+              <img src="./img/project6.png" alt="house" class="card-img" />
+            </div>
             <h3 class="project-title">Tollskogvegen II – Porsgrunn</h3>
             <p class="project-date">Lansering okt 2023</p>
           </a>
@@ -110,7 +122,7 @@
       <div class="footer__conteiner">
         <h2 class="second-title">Kontaktinformasjon</h2>
       <ul class="contacts-list list">
-        <li class="contakts-item">
+        <li class="contacts-item">
           <p class="footer__contacts-kind">Addrese</p>
           <address>
             <p>Odin Eiendom</p>
@@ -119,12 +131,12 @@
             <a href="" class="contacts-link">Kart</a>
           </address>
         </li>
-        <li class="contakts-item">
+        <li class="contacts-item">
           <p class="footer__contacts-kind">Telefon</p>
           <p>Ma - fre 10-16</p>
           <a href="tel:45636260" class="contacts-link">45 63 62 60</a>
         </li>
-        <li class="contakts-item">
+        <li class="contacts-item">
           <p class="footer__contacts-kind">Mail</p>
           <a href="malito:kontakt@odinedom.no" class="contacts-link"
             >kontakt@odinedom.no</a
