--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         </li>
       </ul>
       <button class="main-button">
-        Se alle prosjekter
+        Se alle prosjekter 
         <svg class="arrow-svg" width="26" height="19">
           <use href="./svg/symbol-defs.svg#arrow"></use>
         </svg>
@@ -268,7 +268,7 @@
       <div class="footer__conteiner">
         <h2 class="second-title">Kontaktinformasjon</h2>
         <ul class="contacts-list list">
-          <li class="contakts-item">
+          <li class="contacts-item">
             <p class="footer__contacts-kind">Addrese</p>
             <address>
               <p>Odin Eiendom</p>
@@ -277,12 +277,12 @@
               <a href="" class="contacts-link">Kart</a>
             </address>
           </li>
-          <li class="contakts-item">
+          <li class="contacts-item">
             <p class="footer__contacts-kind">Telefon</p>
             <p>Ma - fre 10-16</p>
             <a href="tel:45636260" class="contacts-link">45 63 62 60</a>
           </li>
-          <li class="contakts-item">
+          <li class="contacts-item">
             <p class="footer__contacts-kind">Mail</p>
             <a href="malito:kontakt@odinedom.no" class="contacts-link"
               >kontakt@odinedom.no</a
