--- a/projectCard.html
+++ b/projectCard.html
@@ -221,10 +221,10 @@
           <p class="contact-name">Tina Vinje</p>
           <ul>
             <li class="contacts-item">
-              <a href="" class="contact-number accent-border">45 63 62 60</a>
+              <a href="" class="contacts-link accent-border">45 63 62 60</a>
             </li>
             <li class="contacts-item">
-              <a href="" class="contact-mail accent-border"
+              <a href="" class="contacts-link accent-border"
                 >kontakt@odineiendom.no</a
               >
             </li>
