--- a/contacts.html
+++ b/contacts.html
@@ -81,10 +81,10 @@
             <p>Innehaver/Daglig Leder</p>
             <ul>
               <li class="persons-phone">
-                <a href="" class="accent-border">35 93 10 20</a>
+                <a href="" class="accent-border contacts-link">35 93 10 20</a>
               </li>
               <li>
-                <a href="" class="accent-border">Kristoffer@odin-eiendom.no</a>
+                <a href="" class="accent-border contacs-link">Kristoffer@odin-eiendom.no</a>
               </li>
             </ul>
           </li>
@@ -94,10 +94,10 @@
             <p>Innehaver/Daglig Leder</p>
             <ul>
               <li class="persons-phone">
-                <a href="" class="accent-border">35 93 10 20</a>
+                <a href="" class="accent-border contacts-link">35 93 10 20</a>
               </li>
               <li>
-                <a href="" class="accent-border">Kristoffer@odin-eiendom.no</a>
+                <a href="" class="accent-border contacts-link">Kristoffer@odin-eiendom.no</a>
               </li>
             </ul>
           </li>
@@ -107,26 +107,26 @@
         <form action="" class="form">
           <h3 class="contacts__form-title">Kontaktskjema</h3>
           <div class="contacts__form-formfield">
-            <!-- <label for="name">Navn</label> -->
+            <label for="name">Navn</label>
             <input
               type="text"
               name="name"
               id="name"
-              placeholder="Navn"
+              class="contacts__form-formfield_input"
             />
           </div>
           <div class="contacts__form-formfield">
-            <!-- <label for="email">Epost</label> -->
-            <input type="email" name="email" id="email" placeholder="Epost"/>
+            <label for="email">Epost</label>
+            <input type="email" name="email" id="email"/>
           </div>
           <div class="contacts__form-formfield">
-            <!-- <label for="tel">Mobil</label> -->
-            <input type="tel" name="tel" id="tel" placeholder="Mobil"/>
+            <label for="tel">Mobil</label>
+            <input type="tel" name="tel" id="tel"/>
           </div>
 
           <div class="contacts__form-formfield contacts__form-message">
-            <!-- <label for="message">Melding</label> -->
-            <textarea name="message" id="message" rows="1" placeholder="Melding"></textarea>
+            <label for="message">Melding</label>
+            <textarea name="message" id="message" rows="1"></textarea>
           </div>
 
           <div class="contacts__form-consent">
@@ -148,6 +148,8 @@
           </button>
         </form>
       </div>
+
+     
       <div class="partners contacts__partners">
         <h3>Våre Samarbeidspartnere</h3>
         <ul class="partners__list">
