--- a/contacts.html
+++ b/contacts.html
@@ -29,17 +29,23 @@
         </button>
 
         <ul class="nav-list list js-nav-list is-hidden" id="nav-menu">
-          <li class="  nav-item">
-            <a href="./projects.html" class="nav-project nav-link">Prosjekter</a>
+          <li class="nav-item">
+            <a href="./projects.html" class="nav-project nav-link"
+              >Prosjekter</a
+            >
           </li>
-          <li class="nav-item ">
+          <li class="nav-item">
             <a href="./about.html" class="nav-about nav-link">Om oss</a>
           </li>
           <li class="nav-item">
-            <a href="./news.html" class="nav-news nav-link  ">Nyheter</a>
+            <a href="./news.html" class="nav-news nav-link">Nyheter</a>
           </li>
           <li class="nav-item">
-            <a href="./contacts.html" class="nav-contacts nav-link accent-border">Kontakt</a>
+            <a
+              href="./contacts.html"
+              class="nav-contacts nav-link accent-border"
+              >Kontakt</a
+            >
           </li>
         </ul>
       </div>
@@ -84,7 +90,9 @@
                 <a href="" class="accent-border contacts-link">35 93 10 20</a>
               </li>
               <li>
-                <a href="" class="accent-border contacs-link">Kristoffer@odin-eiendom.no</a>
+                <a href="" class="accent-border contacs-link"
+                  >Kristoffer@odin-eiendom.no</a
+                >
               </li>
             </ul>
           </li>
@@ -97,7 +105,9 @@
                 <a href="" class="accent-border contacts-link">35 93 10 20</a>
               </li>
               <li>
-                <a href="" class="accent-border contacts-link">Kristoffer@odin-eiendom.no</a>
+                <a href="" class="accent-border contacts-link"
+                  >Kristoffer@odin-eiendom.no</a
+                >
               </li>
             </ul>
           </li>
@@ -107,38 +117,67 @@
         <form action="" class="form">
           <h3 class="contacts__form-title">Kontaktskjema</h3>
           <div class="contacts__form-formfield">
-            
             <input
               type="text"
               name="name"
               id="name"
               class="contacts__form-formfield_input"
             />
-            <label for="name">Navn</label>
+            <label for="name" class="contacts__form-formfield_label"
+              >Navn</label
+            >
           </div>
           <div class="contacts__form-formfield">
-            <label for="email">Epost</label>
-            <input type="email" name="email" id="email"/>
+            <input
+              type="email"
+              name="email"
+              id="email"
+              class="contacts__form-formfield_input"
+            />
+            <label for="email" class="contacts__form-formfield_label"
+              >Epost</label
+            >
           </div>
           <div class="contacts__form-formfield">
-            <label for="tel">Mobil</label>
-            <input type="tel" name="tel" id="tel"/>
+            <input
+              type="tel"
+              name="tel"
+              id="tel"
+              class="contacts__form-formfield_input"
+            />
+            <label for="tel" class="contacts__form-formfield_label"
+              >Mobil</label
+            >
           </div>
 
           <div class="contacts__form-formfield contacts__form-message">
-            <label for="message">Melding</label>
-            <textarea name="message" id="message" rows="1"></textarea>
+            <textarea
+              name="message"
+              id="message"
+              rows="1"
+              class="contacts__form-text_input"
+            ></textarea>
+            <label for="message" class="contacts__form-text_label"
+              >Melding</label
+            >
           </div>
 
           <div class="contacts__form-consent">
             <input
+              class="styled-checkbox"
+              id="styled-checkbox-1"
+              type="checkbox"
+              value="value1"
+            />
+            <label for="styled-checkbox-1">Consent</label>
+            <!-- <input
               class="visually-hidden"
               type="checkbox"
               name="consent"
               value="consent"
               id="consent"
             />
-            <label for="consent">Consent</label>
+            <label for="consent">Consent</label> -->
           </div>
 
           <button class="description-button contacts__form-button main-button">
@@ -150,7 +189,6 @@
         </form>
       </div>
 
-     
       <div class="partners contacts__partners">
         <h3>Våre Samarbeidspartnere</h3>
         <ul class="partners__list">
@@ -172,53 +210,53 @@
     <footer class="conteiner">
       <div class="footer__conteiner">
         <h2 class="second-title">Kontaktinformasjon</h2>
-      <ul class="contacts-list list">
-        <li class="contacts-item">
-          <p class="footer__contacts-kind">Addrese</p>
-          <address>
-            <p>Odin Eiendom</p>
-            <p>Lunderingen 1</p>
-            <p>3941 Porsgrunn</p>
-            <a href="" class="contacts-link">Kart</a>
-          </address>
-        </li>
-        <li class="contacts-item">
-          <p class="footer__contacts-kind">Telefon</p>
-          <p>Ma - fre 10-16</p>
-          <a href="tel:45636260" class="contacts-link">45 63 62 60</a>
-        </li>
-        <li class="contacts-item">
-          <p class="footer__contacts-kind">Mail</p>
-          <a href="malito:kontakt@odinedom.no" class="contacts-link"
-            >kontakt@odinedom.no</a
-          >
-        </li>
-      </ul>
-      <div class="copyright">
-        <p class="copyrigth-paragraph">
-          Copyright 2021 © Moen Eiendom - <span>Org nr: 918712267</span>
-        </p>
-        <ul class="social-list list">
-          <li class="social-item">
-            <a href=""
-              ><svg class="social-svg" width="21" height="33">
-                <use href="./svg/symbol-defs.svg#facebook"></use></svg
-            ></a>
+        <ul class="contacts-list list">
+          <li class="contacts-item">
+            <p class="footer__contacts-kind">Addrese</p>
+            <address>
+              <p>Odin Eiendom</p>
+              <p>Lunderingen 1</p>
+              <p>3941 Porsgrunn</p>
+              <a href="" class="contacts-link">Kart</a>
+            </address>
           </li>
-          <li class="social-item">
-            <a href=""
-              ><svg class="social-svg" width="21" height="33">
-                <use href="./svg/symbol-defs.svg#linkedin"></use></svg
-            ></a>
+          <li class="contacts-item">
+            <p class="footer__contacts-kind">Telefon</p>
+            <p>Ma - fre 10-16</p>
+            <a href="tel:45636260" class="contacts-link">45 63 62 60</a>
           </li>
-          <li class="social-item">
-            <a href=""
-              ><svg class="social-svg" width="21" height="33">
-                <use href="./svg/symbol-defs.svg#instagram"></use></svg
-            ></a>
+          <li class="contacts-item">
+            <p class="footer__contacts-kind">Mail</p>
+            <a href="malito:kontakt@odinedom.no" class="contacts-link"
+              >kontakt@odinedom.no</a
+            >
           </li>
         </ul>
-      </div>
+        <div class="copyright">
+          <p class="copyrigth-paragraph">
+            Copyright 2021 © Moen Eiendom - <span>Org nr: 918712267</span>
+          </p>
+          <ul class="social-list list">
+            <li class="social-item">
+              <a href=""
+                ><svg class="social-svg" width="21" height="33">
+                  <use href="./svg/symbol-defs.svg#facebook"></use></svg
+              ></a>
+            </li>
+            <li class="social-item">
+              <a href=""
+                ><svg class="social-svg" width="21" height="33">
+                  <use href="./svg/symbol-defs.svg#linkedin"></use></svg
+              ></a>
+            </li>
+            <li class="social-item">
+              <a href=""
+                ><svg class="social-svg" width="21" height="33">
+                  <use href="./svg/symbol-defs.svg#instagram"></use></svg
+              ></a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
     <script src="./js/menuButton.js"></script>
