--- a/contacts.html
+++ b/contacts.html
@@ -137,7 +137,11 @@
             <label for="email" class="contacts__form-formfield_label"
               >Epost</label
             >
+            <svg class="smile-svg" width="20" height="27">
+              <use href="./svg/symbol-defs.svg#form-smile"></use>
+            </svg>
           </div>
+          
           <div class="contacts__form-formfield">
             <input
               type="tel"
@@ -170,14 +174,6 @@
               value="value1"
             />
             <label for="styled-checkbox-1">Consent</label>
-            <!-- <input
-              class="visually-hidden"
-              type="checkbox"
-              name="consent"
-              value="consent"
-              id="consent"
-            />
-            <label for="consent">Consent</label> -->
           </div>
 
           <button class="description-button contacts__form-button main-button">
