--- a/projectCard.html
+++ b/projectCard.html
@@ -33,14 +33,16 @@
         </button>
 
         <ul class="nav-list list js-nav-list is-hidden" id="nav-menu">
-          <li class="  nav-item">
-            <a href="./projects.html" class="nav-project nav-link accent-border">Prosjekter</a>
+          <li class="nav-item">
+            <a href="./projects.html" class="nav-project nav-link accent-border"
+              >Prosjekter</a
+            >
           </li>
-          <li class="nav-item ">
+          <li class="nav-item">
             <a href="./about.html" class="nav-about nav-link">Om oss</a>
           </li>
           <li class="nav-item">
-            <a href="./news.html" class="nav-news nav-link ">Nyheter</a>
+            <a href="./news.html" class="nav-news nav-link">Nyheter</a>
           </li>
           <li class="nav-item">
             <a href="./contacts.html" class="nav-contacts nav-link">Kontakt</a>
@@ -87,7 +89,7 @@
       <ul class="options-list">
         <li class="table-items">
           <div class="options-svg">
-            <svg  width="41" height="41">
+            <svg width="41" height="41">
               <use href="./svg/symbol-defs.svg#options1"></use>
             </svg>
           </div>
@@ -109,7 +111,7 @@
         </li>
         <li class="table-items">
           <div class="options-svg">
-            <svg  width="42" height="34">
+            <svg width="42" height="34">
               <use href="./svg/symbol-defs.svg#options3"></use>
             </svg>
           </div>
@@ -120,7 +122,7 @@
         </li>
         <li class="table-items">
           <div class="options-svg">
-            <svg  width="38" height="38">
+            <svg width="38" height="38">
               <use href="./svg/symbol-defs.svg#options4"></use>
             </svg>
           </div>
@@ -131,7 +133,7 @@
         </li>
         <li class="table-items">
           <div class="options-svg">
-            <svg  width="50" height="44">
+            <svg width="50" height="44">
               <use href="./svg/symbol-defs.svg#options5"></use>
             </svg>
           </div>
@@ -141,8 +143,8 @@
           </div>
         </li>
         <li class="table-items">
-          <div class="options-svg"> 
-            <svg  width="30" height="44">
+          <div class="options-svg">
+            <svg width="30" height="44">
               <use href="./svg/symbol-defs.svg#options6"></use>
             </svg>
           </div>
@@ -230,6 +232,26 @@
             </li>
           </ul>
         </div>
+      </div>
+    </div>
+    <div class="line-container conteiner">
+      <div class="progress-line">
+        <div class="progress" style="width: 50%"></div>
+        <div class="status">
+          <div class="dot"></div>
+        </div>
+        <div class="status">
+          <div class="dot completed"></div>
+        </div>
+        <div class="status">
+          <div class="dot"></div>
+        </div>
+
+        <div class="status">
+          <div class="dot"></div>
+        </div>
+      </div>
+
       </div>
     </div>
 
