--- a/projectCard.html
+++ b/projectCard.html
@@ -57,7 +57,7 @@
           <div class="carousel-imgs">
             <img src="./img/carouselPhoto1.png" class="carousel-img visible" />
             <img src="./img/about-apartment.png" class="carousel-img hidden" />
-            <img src="./img/about-teracce.png" class="carousel-img hidden" />
+            <img src="./img/carouselPhoto1.png" class="carousel-img hidden" />
           </div>
           <a class="prev arrow">&#5176;</a>
           <a class="next arrow">&#5171;</a>
@@ -234,11 +234,12 @@
         </div>
       </div>
     </div>
-    <div class="line-container conteiner">
+    <!-- <div class="line-container conteiner">
       <div class="progress-line">
         <div class="progress" style="width: 50%"></div>
         <div class="status">
-          <div class="dot"></div>
+          <div class="dot">
+          </div>
         </div>
         <div class="status">
           <div class="dot completed"></div>
@@ -252,7 +253,7 @@
         </div>
       </div>
 
-      </div>
+      </div> -->
     </div>
 
     <div class="backdrop">
